# 2023-Sentry-CV

./: CMakeLists.txt  README.md  start.sh
autoaim/: autoaim.cpp  autoaim.h
autoaim/armor/: armor.cpp  armor.h
devices/camera/: MER131.cpp  MER131.h  camera_api.cpp  camera_api.h
devices/serial/: serial.cpp  serial.h
script/: device.py
script/templates/: index.html
